# xkcd_sync

./: .gitignore  Cargo.toml  README.md
src/: cli_progress.rs  main.rs
